# mesa-outstation

./: README.md  pyproject.toml
data/: default.json
src/: main.py
